Replaced jQuery with newest Zepto. Code refactoring.

--- a/keyboard.htm
+++ b/keyboard.htm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="zepto.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
