--- a/keyboard.htm
+++ b/keyboard.htm
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="zepto.js"></script>
+    <script type="text/javascript" src="DOMEventsLevel3.shim.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
 </head>
 <body>
