--- a/bookmarklet.htm
+++ b/bookmarklet.htm
@@ -4,7 +4,7 @@
     <title>Untitled Page</title>
 </head>
 <body>
-    <a href="javascript:var%20b=document.body,k=window.keyboard;k&&k.loader&&k.loader.load();if(b&&!document.xmlVersion&&!k){void(z=document.createElement('script'));void(z.type='text/javascript');void(z.src='loader.js');void(b.appendChild(z));}else{}">Click me</a>
+    <a href="javascript:var%20b=document.body,k=window.keyboard;k&&k.loader&&k.loader.load();if(b&&!document.xmlVersion&&!k){void(z=document.createElement('script'));void(z.type='text/javascript');void(z.src='src/loader.js');void(b.appendChild(z));}else{}">Click me</a>
     <input type="text" />
 </body>
 </html>
