--- a/keyboard.htm
+++ b/keyboard.htm
@@ -4,8 +4,7 @@
 <head>
     <title></title>
     <script type="text/javascript" src="src/zepto.js"></script>
-    <script type="text/javascript" src="src/"></script>
-    <script type="text/javascript" src="src/keyboard.js"></script>
+    <script type="text/javascript" src="build/keyboard.js"></script>
 </head>
 <body>
     <textarea cols="80" rows="5" id="test-textarea" name="test">
